<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_back_descipriton_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/movie_detail"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/img_image_description_movie"
            android:layout_width="200dp"
            android:layout_height="280dp"
            android:background="@color/blue_light"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_gendre_description_movie"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:elevation="10dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="80dp"
            app:cardElevation="10dp"
            android:layout_marginEnd="1dp"
            app:cardBackgroundColor="@color/blue_light"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintStart_toEndOf="@+id/img_image_description_movie"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/release_date"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="60dp"
                android:padding="20dp"
                app:srcCompat="@drawable/calendar"
                app:tint="@color/white"
                android:contentDescription="@string/release_date" />

            <TextView
                android:id="@+id/tv_text_item1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_description_movie"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_image_description_movie" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/sinopsis"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_description_movie" />

        <TextView
            android:id="@+id/tv_detail_description_movie"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:lineSpacingExtra="6sp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_time_desciption_movie"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="1dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/blue_light"
            app:layout_constraintBottom_toTopOf="@+id/cardView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintStart_toEndOf="@+id/img_image_description_movie"
            app:layout_constraintTop_toBottomOf="@+id/cv_gendre_description_movie"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/runtime"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <ImageView
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="20dp"
                app:srcCompat="@drawable/clock"
                app:tint="@color/white"
                android:contentDescription="@string/runtime" />

            <TextView
                android:id="@+id/tv_text_item2"
                android:layout_width="match_parent"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="1dp"
            app:cardBackgroundColor="@color/blue_light"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintStart_toEndOf="@+id/img_image_description_movie"
            app:layout_constraintTop_toBottomOf="@+id/cv_time_desciption_movie">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/rating"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/rating"
                android:padding="20dp"
                android:src="@drawable/star"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_text_item3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>